# traffic-detection-kpi

./: .gitignore  Class_refactor_DeepSort_model_video_processing_non_realtime.ipynb  Class_refactor_DeepSort_model_video_processing_non_realtime.py  README.md  bytetrack_simple_counter.ipynb  bytetrack_simple_counter.py  config.yaml  example.yaml  pyproject.toml
docs/superpowers/plans/: 2026-03-16-gui-overlay.md  2026-03-16-live-stream-support.md  2026-03-16-traffic-detection-kpi.md  2026-03-17-lane-editor.md
docs/superpowers/specs/: 2026-03-16-gui-overlay-design.md  2026-03-16-live-stream-support-design.md  2026-03-16-traffic-detection-kpi-design.md  2026-03-17-lane-editor-design.md
tests/: conftest.py  test_annotator.py  test_config.py  test_detection.py  test_lane_editor.py  test_lanes.py  test_metrics.py  test_pipeline.py  test_reporting.py  test_source.py  test_tracking.py
traffic_detection_kpi/: __init__.py  __main__.py  annotator.py  config.py  detection.py  editor_cli.py  lane_editor.py  lanes.py  metrics.py  pipeline.py  reporting.py  source.py  tracking.py
