[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "traffic-detection-kpi"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.0",
    "deep-sort-realtime>=1.3",
    "opencv-python>=4.8",
    "shapely>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pyyaml>=6.0",
    "yt-dlp",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
traffic-kpi = "traffic_detection_kpi.__main__:main"
traffic-lane-editor = "traffic_detection_kpi.editor_cli:main"
